--- a/app/src/app/iniciosesion/iniciosesion.component.html
+++ b/app/src/app/iniciosesion/iniciosesion.component.html
@@ -1,14 +1,29 @@
 <div class="login-container">
-  <div class="login-card">
-    <h2>Iniciar Sesión</h2>
-    <form>
-      <div class="mb-3">
-        <input type="email" class="form-control" id="email" placeholder="Ingrese su correo" required>
+  <h2 class="mb-4">Iniciar Sesión</h2>
+
+  <form [formGroup]="formUser" (ngSubmit)="enviar()">
+    <div class="mb-3">
+      <input type="email" class="form-control" formControlName="email" placeholder="Ingrese su correo" required>
+      <div class="alert alert-danger mt-2" [hidden]="email.valid">
+      <span *ngIf="email.errors?.['required']">
+                        El email es obligatorio
+                      </span>
+      <span *ngIf="email.errors?.['email']">
+                        El email no es valido
+                      </span>
       </div>
-      <div class="mb-3">
-        <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" required>
+    </div>
+    <div class="mb-3">
+      <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" required>
+      <div class="alert alert-danger mt-2" [hidden]="password.valid">
+      <span *ngIf="password.errors?.['required']">
+                      La contraseña es obligatoria
+                    </span>
+      <span *ngIf="password.errors?.['minlength']">
+                      Su contraseña no puede ser menor a 8 caracteress
+                    </span>
       </div>
-      <button type="submit" class="btn btn-custom w-100">Iniciar sesión</button>
-    </form>
-  </div>
+    </div>
+    <button type="submit" class="btn btn-custom w-100" [disabled]="formUser.invalid">Iniciar sesión</button>
+  </form>
 </div>
