--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -1,11 +1,14 @@
-<div class="container-fluid d-flex flex-column justify-content-center min-vh-80">
+<!-- Flecha hacia atrás -->
+<div class="row m-0">
+    <div class="">
+        <a href="#" class="btn-atras text-reset m-0" style="padding: 0;">&lt;</a>
+    </div>
+</div>
+
+<!-- Contenido principal -->
+<div class="container-fluid d-flex flex-column justify-content-center min-vh-80 m-0">
 
     <div class="container position-relative">
-  
-        <!-- Flecha hacia atrás -->
-        <div class="back-arrow position-absolute">
-            <a href="#" class="btn-atras text-reset">&lt;</a>
-        </div>
   
         <!-- Título -->
         <div class="conainter">
@@ -17,11 +20,12 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3 form-container">
                   <form>
-                    <!-- Campo DNI -->
+                    <!-- Campo DNI con botón a la derecha -->
                     <div class="row mb-4">
                         <label for="dni" class="form-label">Ingrese el DNI</label>
-                        <div class="input-wrapper">
+                        <div class="input-group">
                             <input type="text" id="dni" class="form-control dni-input" placeholder="DNI" maxlength="8" (keypress)="validateNumber($event)" required>
+                            <button class="btn btn-op" type="button">Buscar</button>
                         </div>
                     </div>
   
@@ -46,5 +50,4 @@
   
     </div>
   
-  </div>
-  
+</div>
