feat(Arreglos en el navbar, footer e imagenes)

--- a/app/src/app/iniciosesion/iniciosesion.component.html
+++ b/app/src/app/iniciosesion/iniciosesion.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="formUser" (ngSubmit)="enviar()">
     <div class="mb-3">
       <input type="email" class="form-control" formControlName="email" placeholder="Ingrese su correo" required>
-      <div class="alert alert-danger mt-2" [hidden]="email.valid">
+      <div class="alert alert-danger mt-2" [hidden]="email.valid || password.pristine">
       <span *ngIf="email.errors?.['required']">
                         El email es obligatorio
                       </span>
@@ -14,8 +14,8 @@
       </div>
     </div>
     <div class="mb-3">
-      <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" required>
-      <div class="alert alert-danger mt-2" [hidden]="password.valid">
+      <input type="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña">
+      <div class="alert alert-danger mt-2" [hidden]="password.valid || password.pristine">
       <span *ngIf="password.errors?.['required']">
                       La contraseña es obligatoria
                     </span>
