--- a/app/src/app/navegador/navegador.component.html
+++ b/app/src/app/navegador/navegador.component.html
@@ -1,10 +1,14 @@
 <nav class="navbar navbar-dark">
   <div class="container-fluid d-flex justify-content-between">
-    <a class="navbar-brand" href="#">
-      <img src="logo.png" alt="Logo">
+    <a class="navbar-brand" href="/inicio">
+      <img src="logo-G.png" alt="Logo"/>
     </a>
-    <span class="navbar-text">
-                <i class="bi bi-person-circle"></i> Iniciar sesión
-            </span>
+                <a href="#" class="btn-login">
+        <div class="icon-wrapper">
+            <img src="user.png"/>
+        </div>
+        Iniciar sesión
+    </a>
+
   </div>
 </nav>
