feat(inicio de prestamo exitoso, solo texto)

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-ingresar-detalle-prestamo></app-ingresar-detalle-prestamo>
-app-navegador></app-navegador>
-<app-iniciosesion></app-iniciosesion>
-<router-outlet ></router-outlet>
+<app-navegador></app-navegador>
+<app-prestamobien></app-prestamobien>
+<!--<router-outlet ></router-outlet>-->
 <app-piepagina></app-piepagina>
 
