--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -6,7 +6,7 @@
   <div class="icon">✔️</div>
   <div class="message bold">Monto a desembolsar</div>
   <hr class="border border-light border-1 opacity-100">
-  <div class="message">XXXXXXXXXXXXXX</div>
+  <div class="message">S/. {{prestamo.}}</div>
   <div class="message">DATE.</div>
   <hr class="border border-light border-1 opacity-100">
   <div class="message"><a href="/inicio" class="button">Volver al Inicio</a></div>
