FG-57 feat:Juntando Front-backend para el iniciar sesion

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,4 @@
-<app-ingresar-detalle-prestamo></app-ingresar-detalle-prestamo>
-app-navegador></app-navegador>
-<app-iniciosesion></app-iniciosesion>
+<app-navegador></app-navegador>
 <router-outlet ></router-outlet>
 <app-piepagina></app-piepagina>
 
