--- a/app/src/app/iniciosesion/iniciosesion.component.html
+++ b/app/src/app/iniciosesion/iniciosesion.component.html
@@ -1,27 +1,17 @@
 <div class="login-container">
   <h2 class="mb-4">Iniciar Sesión</h2>
-
   <form [formGroup]="formUser" (ngSubmit)="enviar()">
     <div class="mb-3">
-      <input type="email" class="form-control" formControlName="email" placeholder="Ingrese su correo" required>
-      <div class="alert alert-danger mt-2" [hidden]="email.valid || password.pristine">
-      <span *ngIf="email.errors?.['required']">
-                        El email es obligatorio
-                      </span>
-      <span *ngIf="email.errors?.['email']">
-                        El email no es valido
-                      </span>
+      <input type="text" class="form-control" formControlName="username" placeholder="Ingrese usuario" required>
+      <div class="alert alert-danger" *ngIf="formUser.get('username')?.invalid && formUser.get('username')?.touched">
+        <span *ngIf="formUser.get('username')?.errors?.['required']">El nombre de usuario es obligatorio.</span>
       </div>
     </div>
     <div class="mb-3">
-      <input type="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña">
-      <div class="alert alert-danger mt-2" [hidden]="password.valid || password.pristine">
-      <span *ngIf="password.errors?.['required']">
-                      La contraseña es obligatoria
-                    </span>
-      <span *ngIf="password.errors?.['minlength']">
-                      Su contraseña no puede ser menor a 8 caracteress
-                    </span>
+      <input type="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña" required>
+      <div class="alert alert-danger" *ngIf="formUser.get('password')?.invalid && formUser.get('password')?.touched">
+        <span *ngIf="formUser.get('password')?.errors?.['required']">La contraseña es obligatoria.</span>
+        <span *ngIf="formUser.get('password')?.errors?.['minlength']">Su contraseña no puede ser menor a 4 caracteres.</span>
       </div>
     </div>
     <button type="submit" class="btn btn-custom w-100" [disabled]="formUser.invalid">Iniciar sesión</button>
