--- a/app/src/app/navegador/navegador.component.html
+++ b/app/src/app/navegador/navegador.component.html
@@ -1,14 +1,7 @@
 <nav class="navbar navbar-dark">
   <div class="container-fluid d-flex justify-content-between">
-    <a class="navbar-brand" href="/inicio">
+    <a class="navbar-brand" href="/home">
       <img src="logo-G.png" alt="Logo"/>
     </a>
-                <a href="#" class="btn-login">
-        <div class="icon-wrapper">
-            <img src="user.png"/>
-        </div>
-        Iniciar sesión
-    </a>
-
   </div>
 </nav>
