Vista: Cronograa de pagos

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navegador></app-navegador>
-<router-outlet ></router-outlet>
+<app-cronograma-de-pagos></app-cronograma-de-pagos>
 <app-piepagina></app-piepagina>
 
