Agregando Estilo al boton de atras: vista Cronograma de pagos

--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
@@ -97,4 +97,11 @@
   }
   
   
-  
+  .flechita{
+    cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+  }
