--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -1,9 +1,12 @@
 <div class="row">
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-12 d-flex justify-content-center align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
-                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
-              </svg>
+            <div class="flechita">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
+                    <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
+                  </svg>
+            </div>
+            
         
         
             <h2 class="h100" >Cronograma de pagos</h2>
