Boton descargar pdf

--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -82,8 +82,8 @@
             <div class="row ">
                 <p class="text-end">Para ver su cronograma en formato PDF, descargue:</p>
             </div>
-            <div class="row">
-                <p class="text-end">FG_Cronograma N°<span>XXX</span>.pdf</p>
+            <div class="row download">
+                <p class="text-end download">FG_Cronograma N°<span>XXX</span>.pdf</p>
             </div>
         </div>
 
