--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.scss
@@ -105,3 +105,13 @@
         transform: scale(1.1);
     }
   }
+
+.download {
+    cursor: pointer;
+    text-decoration: underline;
+    color: blue;
+
+    &:hover {
+        color: black; /* Example hover effect */
+    }
+}
