--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navegador></app-navegador>
-<app-cronograma-de-pagos></app-cronograma-de-pagos>
+<router-outlet></router-outlet>
+
 <app-piepagina></app-piepagina>
 
