Vista estatica en Ingrese los detalles de prestamo

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-navegador></app-navegador>
-<router-outlet></router-outlet>
-
+<app-ingresar-detalles-de-prestamos-v2></app-ingresar-detalles-de-prestamos-v2>
 <app-piepagina></app-piepagina>
 
