--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
@@ -4,12 +4,9 @@
             <div class="flechita">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
                     <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
-                  </svg>
+                </svg>
             </div>
-            
-        
-        
-            <h2 class="h100" >Ingrese los detalles del préstamo</h2>
+            <h2 class="h100">Ingrese los detalles del préstamo</h2>
         </div>
     </div>
 </div>
@@ -19,15 +16,19 @@
         <div class="row">
             <div class="row">
                 <h4>Ingrese el monto</h4>
-                
             </div>
         
-            <div class="row d-flex justify-content-center eb ontainer-fluid">
+            <div class="row d-flex justify-content-center eb container-fluid">
                 <div class="col-4">
-                    <input type="text" class="form-control" placeholder="s/" />
+                    <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="s/" 
+                        (keypress)="validateInput($event)" 
+                        (input)="validatePositive($event)" />
                 </div>
                 <div class="col-4">
-                    <button class=" col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center  w80p custom-button-b text-light">
+                    <button class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light">
                         <div class="text-center fs-4 fw-bold">
                             1 mes
                         </div>
@@ -37,7 +38,7 @@
                     </button>
                 </div>
                 <div class="col-4">
-                    <button class=" col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center  w80p custom-button-b text-light">
+                    <button class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light">
                         <div class="text-center fs-4 fw-bold">
                             6 meses
                         </div>
@@ -49,36 +50,27 @@
 
                 <table class="table">
                     <thead>
-                      <tr>
-                        <th scope="col">Cuota Mensula</th>
-                        <th scope="col">Pago Total</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">Cuota Mensual</th>
+                            <th scope="col">Pago Total</th>
+                        </tr>
                     </thead>
                     <tbody class="table-group-divider">
-                      <tr>
-                        <th scope="row">S/. 00.00</th>
-                        <td>S/. 00.00</td>
-                      </tr>
+                        <tr>
+                            <th scope="row">S/. 00.00</th>
+                            <td>S/. 00.00</td>
+                        </tr>
                     </tbody>
-                  </table>
+                </table>
             </div>
 
             <div class="row v100 d-flex justify-content-center">
                 <div class="row w80 ">
-                    
-                        <button class="btn2 eb">Confirmar</button>
-    
+                    <button class="btn2 eb">Confirmar</button>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
 
-
-
-<div class="row w-100 d-flex justify-content-around">
-    
-    
-</div>
+<div class="row w-100 d-flex justify-content-around"></div>
