--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navegador></app-navegador>
-<app-ingresar-detalles-de-prestamos-v2></app-ingresar-detalles-de-prestamos-v2>
+<router-outlet></router-outlet>
 <app-piepagina></app-piepagina>
 
