--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-12 d-flex justify-content-center align-items-center">
-            <div class="flechita">
+            <div class="flechita" (click)="continue2()">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
                     <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
                   </svg>
@@ -90,7 +90,7 @@
         <div class="row v100 d-flex justify-content-center">
             <div class="row w80 ">
                 
-                    <button class="btn eb">Confirmar</button>
+                    <button class="btn eb" (click)="continue()">Confirmar</button>
 
             </div>
         </div>
