--- a/app/src/app/usuarios/publicusers/publicusers.component.html
+++ b/app/src/app/usuarios/publicusers/publicusers.component.html
@@ -18,8 +18,8 @@
       </thead>
       <tbody>
         <div *ngIf="isLoading">Cargando usuarios...</div>
-        <div *ngIf="!isLoading">
-</div>
+        <div *ngIf="!isLoading"></div>
+        
         <tr *ngFor="let user of users">
           <td>{{ user.id }}</td>
           <td>{{ user.username }}</td>
