--- a/app/src/app/validar-informacion/validar-informacion.component.scss
+++ b/app/src/app/validar-informacion/validar-informacion.component.scss
@@ -87,3 +87,24 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar sensación de elevación */
   background-position: left; /* Mueve el gradiente lentamente hacia la izquierda */
 }
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; // Ajusta según necesites
+}
+
+.spinner {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #007bff; // Color del spinner
+  border-radius: 50%;
+  width: 50px; // Ajusta el tamaño según necesites
+  height: 50px; // Ajusta el tamaño según necesites
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
