--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -38,7 +38,7 @@
   
                     <!-- Botón Continuar -->
                     <div class="row text-center my-4">
-                      <button type="submit" class="btn">Continuar</button>
+                      <button type="submit" class="btn" (click)="enviar()">Continuar</button>
                     </div>
                   </form>
                 </div>
