Validacion de botones dinamico

--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -34,7 +34,7 @@
                     <p class="er et" >Plaz (N° de cuotas): <span class=""></span></p>
                 </div>
                 <div class="col-6">
-                    <p class="color et">Monto total a pagar: S/<span class="negro">12</span> </p>
+                    <p class="color et">Monto total a pagar: S/<span class="negro"></span> </p>
                 </div>
             </div>
     
