--- a/app/src/app/validar-informacion/validar-informacion.component.scss
+++ b/app/src/app/validar-informacion/validar-informacion.component.scss
@@ -76,7 +76,7 @@
 
 .dni-input:focus {
     outline: none; /* Evitar borde azul al enfocarse */
-    box-shadow: none; /* Evitar sombra al enfocarse */
+    box-shadow: none; /* Evitar sombra al enfocarse v1234 */
 }
 
 .min-vh-80 {
