--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
@@ -29,8 +29,8 @@
           <div class="col-4">
             <button type="button" 
                     class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
-                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime('1') : null"
-                    [disabled]="prestamoForm.get('monto')?.value < 500 || selectedTimeButton === '1'">
+                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(1) : null"
+                    [disabled]="prestamoForm.get('monto')?.value < 500 || selectedTimeButton === 1">
               <div class="text-center fs-4 fw-bold">1</div>
               <div class="text-center fs-4 fw-bold">mes</div>
               <div class="text-center">10 % de interés</div>
@@ -40,8 +40,8 @@
           <div class="col-4">
             <button type="button" 
                     class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
-                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime('6') : null"
-                    [disabled]="prestamoForm.get('monto')?.value < 500 || selectedTimeButton === '6'">
+                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(6) : null"
+                    [disabled]="prestamoForm.get('monto')?.value < 500 || selectedTimeButton === 6">
               <div class="text-center fs-4 fw-bold">6</div>
               <div class="text-center fs-4 fw-bold">meses</div>
               <div class="text-center">20 % de interés</div>
@@ -52,7 +52,7 @@
         <div class="row v100 d-flex justify-content-center">
           <div class="row w80">
             <button class="btn2 eb" type="submit" 
-        [disabled]="prestamoForm.invalid || !selectedTimeButton">Confirmar</button>
+                     [disabled]="prestamoForm.invalid || !selectedTimeButton">Confirmar</button>
           </div>
         </div>
       </form>
